--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <meta charset="utf-8">
     <title>SIREESHA REDDY</title>
     <link rel="stylesheet" type='text/css' href="styles.css">
-    <link rel='icon' href="css/images/favicon (3).ico">
+    <link rel='icon' href="images/favicon (3).ico">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Open+Sans+Condensed:300|Playfair+Display&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="top-container">
-      <img class="top-cloud"src="css\images\cloud.png" alt="clouds" >
+      <img class="top-cloud"src="images\cloud.png" alt="clouds" >
       <h1>I'm Sireesha</h1>
       <p>a web Programmer.</p>
-      <img class='bottom-cloud' src="css\images\cloud.png" alt="clouds" >
+      <img class='bottom-cloud' src="images\cloud.png" alt="clouds" >
       <img src="css\images\mountain.png" alt="mountain" >
     </div>
     <div class="middle-container">
       <div class="profile">
         <h2>About me</h2>
-        <img id="profilepic" src="css/images/cvpic2.jpeg" alt="Sireesha Reddy profile photo" height="150px" width="120px">
+        <img id="profilepic" src="images/cvpic2.jpeg" alt="Sireesha Reddy profile photo" height="150px" width="120px">
 
         <p>I'm a Web Programmer.And I love to learn new things.</p>
       </div>
@@ -26,7 +26,7 @@
       <div class="skills">
         <h2>My Skills</h2>
         <div class="skill-row">
-<img id="skillpic" src="css/images/data.png" alt="computerimage" height="80px" width="80px">
+<img id="skillpic" src="images/data.png" alt="computerimage" height="80px" width="80px">
 
           <table class="skilltable" cellspacing='10'>
             <tr>
@@ -58,7 +58,7 @@
 <hr>
       <div class="Hobbies">
         <h2>My Hobbies</h2>
-          <img id="hobbiespic" src="css/images/interests.png" alt="contact image" height="100px" width="100px"><br>
+          <img id="hobbiespic" src="images/interests.png" alt="contact image" height="100px" width="100px"><br>
 
           <a href="sews/sthumbnail.html" target="_blank">Designing & Sewing clothes</a>
           <p>Dancing</p>
@@ -72,7 +72,7 @@
       <hr>
       <div class="contact-me">
         <h2>Get In Touch</h2>
-        <img id="contactpic" src="css/images/contact.png" alt="contact image" height="100px" width="100px">
+        <img id="contactpic" src="images/contact.png" alt="contact image" height="100px" width="100px">
         <h3>Sireesha Reddy</h3>
         <p>9th Floor<br>Building no. 7B <br>Abu Hurairah Street <br>Block 12 Salmiya <br>Kuwait</p>
 
@@ -83,23 +83,23 @@
     <div class="bottom-container">
 
         <a class="footer-link" href="mailto:sireeshareddy.7773@gmail.com" >
-        <img  src="css/images/gmail.png" alt="gmail Link" height="30" width="30px"></a>
+        <img  src="images/gmail.png" alt="gmail Link" height="30" width="30px"></a>
 
       <a class="footer-link" href="https://www.linkedin.com/in/isireesha-reddy" target="_blank">
-        <img  src="css/images/linkedin (1).png" alt="linkedin Link" height="30" width="30px"></a>
+        <img  src="images/linkedin (1).png" alt="linkedin Link" height="30" width="30px"></a>
 
         <a class="footer-link" href="https://github.com/isireeshareddy"target="_blank">
-          <img  src="css/images/github.png" alt="Github Link" height="30px" width="30px"></a>
+          <img  src="images/github.png" alt="Github Link" height="30px" width="30px"></a>
 
 
       <a class="footer-link" href="https://www.youtube.com/channel/UCDknjXf4u5HVYxvb0UDwpLQ?app=desktop" target="_blank">
-        <img  src="css/images/youtube (2).png" alt="Youtube Link" height="30" width="30px"></a>
+        <img  src="images/youtube (2).png" alt="Youtube Link" height="30" width="30px"></a>
 
       <a class="footer-link" href="https://www.facebook.com/sireesha.reddy.962" target="_blank">
-        <img  src="css/images/facebook (1).png" alt="facebook lLink" height="30" width="30px"></a>
+        <img  src="images/facebook (1).png" alt="facebook lLink" height="30" width="30px"></a>
 
       <a class="footer-link" href="https://www.instagram.com/isireesha_reddy"target="_blank">
-        <img  src="css/images/instagram.png" alt="Instagram Link" height="30px" width="30px"></a>
+        <img  src="images/instagram.png" alt="Instagram Link" height="30px" width="30px"></a>
 
       <p>© 2018 Sireesha I.</p>
     </div>
