--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1>I'm Sireesha</h1>
       <p>a web Programmer.</p>
       <img class='bottom-cloud' src="images\cloud.png" alt="clouds" >
-      <img src="css\images\mountain.png" alt="mountain" >
+      <img src="images\mountain.png" alt="mountain" >
     </div>
     <div class="middle-container">
       <div class="profile">
