--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
           <a href="sews/sthumbnail.html" target="_blank">Designing & Sewing clothes</a>
           <p>Dancing</p>
-          <p>Arts & crafts</p>
+          <a href="artsandcrafts.html" target="_blank">Arts & crafts</a>
           <p>Vlogging: <a href="https://www.youtube.com/channel/UCDknjXf4u5HVYxvb0UDwpLQ?app=desktop" target="_blank">Youtube </a></p>
           <p>Shopping</p>
           <p>Watching movies</p>
